- Reduced over one-third of kubling-client warnings. - Applied formatting according to Kubling's standards.